"Implemented basic http security"